fixed bugs + use virtual threads